styles.css
#calculator {
    border: 10px black solid;
    background-color: rgb(195, 255, 255);
    border-radius: 12px;
    
}

button {
    background-color: rgb(67, 202, 255);
    color: rgb(255, 255, 255);
    border: 0px;
    border-radius: 4px;
    margin: 2px;
    padding: 12px;
    font-size: 16px;
    font-weight: 600;
    width: 72px;
}

.clear {
    /*display: block;*/
    font-size: 18px;
    font-weight: 800;
    margin-right: auto;
    margin-left: 114px;
}

.button-container {
    width: 290px;
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
}

#display {
    width: 300px;
    height: 90px;
    background-color: rgb(115, 182, 115);
    font-size: 24px;
    font-weight: 800;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

body {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.right-margin {
    margin-right: 0px;
}

.left-margin {
    margin-left: 10px;
}

.floating-point {
    
    justify-content: center;
}

